--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "ecommercial",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "server": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "description": "",
   "dependencies": {
+    "express": "^4.19.2",
+    "mongoose": "^8.3.1",
+    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "concurrently": "^9.2.0"
   }
 }
