--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@chakra-ui/react": "2.8.1",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "framer-motion": "10.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
