--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.3.1",
-    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.1"
+  },
+  "devDependencies": {
     "concurrently": "^9.2.0"
   }
 }
