--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "2.8.1",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "framer-motion": "10.16.4",
